fix style bug on firefox

--- a/app/assets/stylesheets/admin/ckeditor_hack.scss
+++ b/app/assets/stylesheets/admin/ckeditor_hack.scss
@@ -1,17 +1,17 @@
 .cke {
   * {
-    -webkit-box-sizing: initial;
-    -moz-box-sizing: initial;
-    box-sizing: initial;
+    -webkit-box-sizing: content-box;
+    -moz-box-sizing: content-box;
+    box-sizing: content-box;
   }
 
   table tbody tr:hover td {
-    background-color: initial;
+    background-color: transparent;
   }
 
   table tbody tr:first-child td {
-    border-top: initial;
-    border-left: initial;
+    border-top: none;
+    border-left: none;
   }
 
   table tbody tr:hover td img {
